--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -1,19 +1,3 @@
-.list-header {
-    background: $off-white;
-    border: 1px solid darken($off-white, 7%);
-    color: $grey;
-    display: flex;
-    justify-content: space-between;
-    padding: $s-size $m-size;
-}
-
-.list-body {
-    margin-bottom: $m-size;
-    @media (min-width: $desktop-breakpoint) {
-        margin-bottom: $l-size;
-    }
-}
-
 .entry-item {
     border: 2px solid darken($off-white, 7%);
     color: $dark-grey;
@@ -21,18 +5,22 @@
     flex-direction: column;
     padding: $s-size;
     text-decoration: none;
-    margin: 0;
+    margin: $s-size 0 0 0;
     word-break: break-all;
     transition: background .3 ease;
     // equivalent to: .list-item:hover {}
     &:hover {
         background: $off-white;
     }
+    // Targets desktops and larger screens
     @media (min-width: $desktop-breakpoint) {
         align-items: center;
         flex-direction: row;
         justify-content: space-between;
         padding: $m-size;
+        margin: 0 auto;
+        padding-left: $s-size;
+        width: 50%;
     }
 }
 
@@ -45,14 +33,5 @@
     padding: $m-size;
     &:hover {
         background: none;
-    }
-}
-
-.entry-item__content {    
-    margin: $s-size 0 0 0;
-    
-    @media (min-width: $desktop-breakpoint) {
-        margin: 0;
-        padding-left: $s-size;
     }
 }
