_button, _box-layout - styled to match background

--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -9,8 +9,9 @@
 }
 
 .box-layout__box {
-    background: fade-out(white, .15);
+    background: none;
     border-radius: 3px;
+    font-size: $font-size-large;
     padding: $l-size $m-size;
     text-align: center;
     width: 25rem;
@@ -26,3 +27,4 @@
     margin: 0 0 $m-size 0;
     line-height: 1;
 }
+
