--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -14,6 +14,15 @@
     background-color: #888;
 }
 
+.button--particles {
+    color: $dark-grey;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: 1px solid $dark-grey;
+    overflow: hidden;
+    outline: none;
+}
+
 .button--link {
     background: none;
 }
