ViewAllPage, _list - styles added
Added styles to fix view all rendering

--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -41,3 +41,10 @@
         background: none;
     }
 }
+
+.entry-item--all {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: normal;
+}
+
+
