viewall button css improvements

--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -5,6 +5,7 @@
 
     // For regular, larger screens
     @media (min-width: $desktop-breakpoint) {
+        margin-top: 3%;
         flex-direction: row;
         margin-bottom: $l-size; 
     }
