--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -8,6 +8,9 @@
     line-height: 1;
     padding: $s-size;
     text-decoration: none;
+    &:hover {
+        background-color: lighten($blue, 20%)
+    }
 }
 
 .button--secondary {
@@ -25,4 +28,10 @@
 
 .button--link {
     background: none;
+}
+
+.button--viewall {
+    margin-left: 60%;
+    margin-bottom: 0;
+    line-height: 1.5;
 }
