--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    background: $blue;
+    background: $dark-blue;
 }
 
 .header__content {
@@ -15,14 +15,4 @@
     h1 {
         margin: 0;
     }
-}
-
-.header--recall {
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: .7rem;
-    padding-right: .7rem;
-    color: $dark-blue;
-    border: inset #afafaf 3px;
-    background-color: #666;
 }
